man-db 2.8.2
============

Major changes since man-db 2.8.1:

	Fixes:
	------

	* Make seccomp sandbox allow kill and tgkill when the signal is
	  directed at the current process or one of its threads; this is
	  needed by xz.

	* Make seccomp sandbox allow ioctl(fd, TIOCGWINSZ), since that's used
	  by musl.

man-db 2.8.1 (9 February 2018)
==============================

Major changes since man-db 2.8.0:

	Fixes:
	------

	* Fix seccomp sandbox build on Linux/POWER.

	* Fix manconv execution under seccomp when man is installed setuid.

	* Make seccomp sandbox allow mremap (used by iconv, for example).

	Improvements:
	-------------

	* configure now has a --without-libseccomp option to disable the use
	  of seccomp even if the library is available.

man-db 2.8.0 (4 February 2018)
==============================

Major changes since man-db 2.7.6.1:

	Fixes:
	------

	* Fix locale macro loading for Chinese to load the macro file
	  corresponding to just the language part of the user's locale.

	* Honour --enable-cache-owner in generated systemd tmpfiles snippet
	  rather than hardcoding "man".

	* If man adds prefixes to a page to handle such things as disabling
	  hyphenation, then take account of those when looking for a
	  preprocessor line at the start of the page.

	* Fix a segfault in 'man -D --help'.

	Improvements:
	-------------

	* Treat "\(en" as another synonym for "\-" in NAME sections.

	* Confine most subprocesses that handle untrusted data using
	  seccomp.  This mainly deals with subprocesses that perform
	  encoding conversions, (de)compressors, groff programs, and a few
	  other odds and ends.  groff programs use a slightly more
	  permissive filter since they need to create temporary files, so
	  additional path-based confinement (e.g. using AppArmor) is still
	  useful.

	  If this goes wrong, then MAN_DISABLE_SECCOMP=1 can be set in the
	  environment to disable it, but please report any such problem as a
	  bug.
